examples/test/testpolicy6255.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6255
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key35: value6
      key27: value2
      key28: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value18
      podSelector:
        matchLabels:
          key32: value48
          key37: value0
          key25: value12
